--- a/index.html
+++ b/index.html
@@ -179,16 +179,16 @@
       <section class="container">
         <div class="optional-banner">
           <div class="title">
-            <h1>
+            <h1 id="optional-title">
               All Highlights <br />
               Copa America 2021
             </h1>
-            <p>
+            <article>
               Copa America Final 2021, Argentina vs Brazil Highlights: Lionel
               Messi’s Argentina beat Brazil 1-0 in Saturday’s Copa America final
               to secure the national team’s first title in 28 years and the
               superstar’s first major international trophy.
-            </p>
+            </article>
             <a href="https://github.com/mdnhs" target="-black"
               >Watch Live<i class="fas fa-long-arrow-alt-right"></i
             ></a>
